--- a/monito-lib/Cargo.toml
+++ b/monito-lib/Cargo.toml
@@ -4,3 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+windows = { version = "^0.59.0", features = ["Win32_Graphics_Gdi", "Win32_Devices_Display", "Win32_UI_WindowsAndMessaging"] }
