--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,3 +29,8 @@ jobs:
       run: rustup target add ${{matrix.target}}
     - name: Build project
       run: cargo build --verbose --release --target ${{matrix.target}}
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: monito-rs
+        path: target/release
