--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 cargo-features = ["edition2024"]
 
 [workspace]
-members = [ "monito-cli", "monito-gui","monito-lib"]
+members = ["monito-cli", "monito-lib", "monito-gui/src-tauri"]
 resolver = "3"
 
 [workspace.dependencies]
+log = { version = "0.4" }
+env_logger = { version = "0.11" }
+
+[profile.release]
+opt-level = "s"
+lto = true
+strip = true
