--- a/monito-lib/Cargo.toml
+++ b/monito-lib/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2024"
 
 [dependencies]
 windows = { version = "^0.59.0", features = ["Win32_Graphics_Gdi", "Win32_Devices_Display", "Win32_UI_WindowsAndMessaging"] }
+wmi ={ version = "^0.14" }
+log = { workspace = true }
+env_logger = { workspace = true }
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "1"
